Add conf buggé
